objects/APTS_ERP_Order_Item_Data__c.object
<CustomObject>
    <description>Object to hold item data provided by ERP systems</description>
    <fields>
        <fullName>APTS_ARKTX__c</fullName>
        <description>Short text for sales order item</description>
        <label>Short text for item</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CLOSE_DATE__c</fullName>
        <description>Closing Date</description>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_DELETE__c</fullName>
        <description>Deletion Flag, delete whole item from Apttus</description>
        <label>Deletion Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DOCNUM__c</fullName>
        <description>IDoc Number</description>
        <label>IDoc Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERDAT__c</fullName>
        <description>Date on which record was created</description>
        <label>Date on which record was created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_ERPID__c</fullName>
        <label>ERPID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERZET__c</fullName>
        <description>Entry Time</description>
        <label>Entry Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_ID__c</fullName>
        <description>Face Reference Object ID</description>
        <label>Face Reference Object ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_LINEID__c</fullName>
        <description>FACE Reference Item Object ID</description>
        <label>FACE Reference Item Object ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_TYP__c</fullName>
        <description>FACE Reference Object Type</description>
        <label>FACE Reference Object Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for Req.#6486, used to identify whether Error occured while processing Order information to create MSPA Sales order</description>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ITEM_HEADER_KEY_New__c</fullName>
        <description>This new field will replace the APTS_ITEM_HEADER_KEY__c formula field. This will be updated via Trigger.</description>
        <label>Item Header Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ITEM_HEADER_KEY__c</fullName>
        <formula>APTS_ERPID__c + APTS_VBELN__c + APTS_DOCNUM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Header Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_SalesOrder_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for Req.#6486, used to identify whether ERP Order Item is created for MSPA Sales Order Creation.</description>
        <label>Is SalesOrder Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Key__c</fullName>
        <formula>APTS_ERPID__c + APTS_VBELN__c + APTS_POSNN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_KURSK_ASSOLD__c</fullName>
        <description>Exchange Rate for Price Determination - as sold</description>
        <label>Ex. Rate for Price Determination-As Sold</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_KURSK__c</fullName>
        <description>Current Exchange Rate for Price Determination</description>
        <label>Current Ex. Rate for Price Determination</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_MATNR__c</fullName>
        <description>Material Number</description>
        <label>Material Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE_ASSOLD__c</fullName>
        <description>Order Quantity in Sales Units - As Sold</description>
        <label>Order Quantity in Sales Units - As Sold</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE__c</fullName>
        <description>Current Order Quantity in Sales Units</description>
        <label>Current Order Quantity in Sales Units</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NETWR_ASSOLD__c</fullName>
        <description>Net value of the order item in document currency - First fill</description>
        <label>Net val of order item document currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NETWR__c</fullName>
        <description>Current Net value of the order item in document currency</description>
        <label>Cur. Net val of order item- doc currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Information_Error__c</fullName>
        <description>This field is created for Req.#6486, used to Populate error while processing Order Information</description>
        <label>Order Information Error</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_POSNN__c</fullName>
        <description>Subsequent item of an SD document</description>
        <label>SAP item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_POSNV__c</fullName>
        <description>Preceding SAP document Item</description>
        <label>Preceding SAP document Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PSTYV__c</fullName>
        <description>Sales Document Item Category</description>
        <label>Sales Document Item Category</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_UEPOS__c</fullName>
        <description>Higher level item in bill of material structures</description>
        <label>Higher item - bill of material structure</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBELN__c</fullName>
        <description>Subsequent Sales and distribution document</description>
        <label>SAP document</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBELV__c</fullName>
        <description>Preceding SAP document</description>
        <label>Preceding SAP document</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBTYV__c</fullName>
        <description>Preceding SD document category</description>
        <label>Preceding SD document category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VRKME__c</fullName>
        <description>Sales Unit</description>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WAERK__c</fullName>
        <description>SAP Document Currency</description>
        <label>SAP Document Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WAVWR_ASSOLD__c</fullName>
        <description>Cost in document currency - as sold</description>
        <label>Cost in document currency - as sold</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_WAVWR__c</fullName>
        <description>Current Cost in document currency</description>
        <label>Current Cost in document currency</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ERP Order Item Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_CLOSE_DATE__c</columns>
        <columns>APTS_VBELN__c</columns>
        <columns>APTS_POSNN__c</columns>
        <columns>APTS_ERPID__c</columns>
        <columns>APTS_FACE_REF_ID__c</columns>
        <columns>APTS_FACE_REF_LINEID__c</columns>
        <columns>APTS_Is_Processed__c</columns>
        <columns>APTS_WAVWR__c</columns>
        <columns>APTS_NETWR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>APTS_VBELN__c</columns>
        <columns>APTS_ERPID__c</columns>
        <columns>APTS_POSNN__c</columns>
        <columns>APTS_DOCNUM__c</columns>
        <columns>APTS_FACE_REF_ID__c</columns>
        <columns>APTS_FACE_REF_LINEID__c</columns>
        <columns>APTS_FACE_REF_TYP__c</columns>
        <columns>APTS_CLOSE_DATE__c</columns>
        <columns>APTS_Is_Processed__c</columns>
        <columns>APTS_WAVWR__c</columns>
        <columns>APTS_KURSK__c</columns>
        <columns>APTS_NETWR__c</columns>
        <columns>APTS_WAVWR_ASSOLD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP-ORDER-ITEM-{000000}</displayFormat>
        <label>ERP Item Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Order Item Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>